<resources>
    <string name="app_name">Re-Book IT</string>
    <string name="search_action">Search</string>
    <string name="search_hint">Search the book you want</string>
    <string name="nothing_found">No subtitle found</string>
    <string name="but_button">Buy the book</string>
    <string name="row_id_key" translatable="false">ROW_ID</string>
    <string name="query_key" translatable="false">QUERY</string>
    <string name="title_search">Search by title</string>
    <string name="author_search">Search by author</string>
    <string name="courses_search">Search by course</string>
    <string name="searhedBy_key" translatable="false">SEARCHEDBY</string>
    <string name="search_query_key" translatable="false">SEARCHQUERYKEY</string>
    <string name="loading">Please wait while content is loading...</string>
    <string name="opening_hours_heading">OPENING HOURS</string>
    <string name="adress_heading">ADRESS</string>
    <string name="adress">Agoralaan Gebouw D, Kantoor B111\n3590 Diepenbeek, Vlaanderen</string>
    <string-array name="searchChoice">
        <item>Title</item>
        <item>Author</item>
        <item>Course</item>
        <item>ISBN</item>
    </string-array>
    <string name="sort_by_key" translatable="false">Sort by</string>
    <string-array name="sortBy">
        <item>Most recent</item>
        <item>Cheap first</item>
        <item>Expensive first</item>
        <item>Alphabetical</item>
        <item>Ascending quality</item>
        <item>Descending quality</item>
    </string-array>
    <string-array name="sortByValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="sortByDefault">0</string>
    <string name="max_price_key" translatable="false">Max price</string>
    <string name="settings_action">Settings</string>
    <string name="contact_action">Contact</string>
    <string name="info_price_heading">Which price do you pay at Re-Book IT?</string>
    <string name="info_price_and_quality">Books at Re-Book IT have a qualitylabel which also determines the price.
        The percentage of the quality is also the price wich you pay relative the new price in the campusshop.
    Each book gets it\'s qualitylabel after a physical inspection by our team.</string>
    <string name="info_green_smiley">80% or more / unused</string>
    <string name="info_red_smiley">70% / used without notes</string>
    <string name="info_grey_smiley">50% / with notes</string>
    <string name="info_yellow_smiley">30% / with A LOT of notes or just an old edition</string>
    <string name="info_warranty_heading">What warranty is provided at Re-Book IT?</string>
    <string name="info_warranty">Every client gets one month to return a book. This is only valid if a mistake is made on the side on Re-Book IT.
    Specifically this means a wrong qualitylabel or wrong product information.\n\n</string>
    <string name="info_label">Info</string>
    <string name="author_detail">Authors:\n</string>
    <string name="courses_detail">Courses:\n</string>
    <string name="university_detail">Universities:\n</string>
    <string name="no_courses_found">No courses found</string>
    <string name="no_univerities_found">No universities found</string>
    <string name="isbn_detail">ISBN:\n</string>
    <string name="count_detail">Count:\n</string>
    <string name="quality_detail">Quality:\n</string>
    <string name="share_title">Share the book with all your friends</string>
    <string name="share_begin">Just found this awesome book:\n</string>
    <string name="share_end">Shared with the Re-Book IT app.</string>
    <string name="toast_start_update">Updating content</string>
    <string name="toast_end_succes">Content has been updated</string>
    <string name="toast_end_fail">Failed updating content</string>
    <string name="no_network">Turn on internet to update content !!</string>
    <string name="Author_info">Created by Vandebosch Remy</string>
</resources>
