<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/search_action"
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView">
    </item>
    <item
        android:title="dots"
        android:id="@+id/empty"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="always">
            <menu>
                <item
                    android:title="@string/settings_action"
                    android:id="@+id/action_settings"
                    app:showAsAction="ifRoom"
                    android:onClick="loadSettings">
                </item>
                <item
                    android:title="@string/contact_action"
                    android:id="@+id/action_contact"
                    app:showAsAction="ifRoom"
                    android:onClick="loadContact">
                </item>
            </menu>
    </item>
</menu>