<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_price_heading"
                android:textSize="20sp"
                android:id="@+id/priceHeading"
                android:layout_marginVertical="5dp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_below="@id/priceHeading">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceHeading"
                android:text="@string/info_price_and_quality"
                android:id="@+id/priceInfo"
                android:layout_marginVertical="5dp">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_below="@id/priceInfo">
            </View>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/green_smiley"
                android:layout_below="@+id/priceInfo"
                android:id="@+id/green_smiley"
                android:layout_marginVertical="5dp"
                android:layout_marginRight="5dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_green_smiley"
                android:layout_toRightOf="@+id/green_smiley"
                android:layout_below="@id/priceInfo"
                android:layout_marginVertical="5dp">
            </TextView>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/red_smiley"
                android:layout_below="@id/green_smiley"
                android:id="@+id/red_smiley"
                android:layout_marginVertical="5dp"
                android:layout_marginRight="5dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_red_smiley"
                android:layout_toRightOf="@id/red_smiley"
                android:layout_below="@id/green_smiley"
                android:layout_marginVertical="5dp">
            </TextView>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/grey_smiley"
                android:layout_below="@id/red_smiley"
                android:id="@+id/grey_smiley"
                android:layout_marginVertical="5dp"
                android:layout_marginRight="5dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_grey_smiley"
                android:layout_toRightOf="@id/grey_smiley"
                android:layout_below="@id/red_smiley"
                android:layout_marginVertical="5dp">
            </TextView>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/yellow_smiley"
                android:layout_below="@id/grey_smiley"
                android:id="@+id/yellow_smiley"
                android:layout_marginVertical="5dp"
                android:layout_marginRight="5dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_yellow_smiley"
                android:layout_toRightOf="@id/yellow_smiley"
                android:layout_below="@id/grey_smiley"
                android:layout_marginVertical="5dp"
                android:id="@+id/info_yellow_smiley">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_below="@id/info_yellow_smiley">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_warranty_heading"
                android:textSize="20sp"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/info_yellow_smiley"
                android:id="@+id/warranty_heading">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_below="@id/warranty_heading">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_warranty"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/warranty_heading">
            </TextView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>